hphp/test/zend/good/Zend/tests/use_function/no_global_fallback2.php.expectf

Fatal error: Call to undefined function bar\test() in %s/no_global_fallback2.php on line 11
